Add route for getting information about the logged-in user
