# src/routes/account/index.ts
@@ -3,6 +3,7 @@ import register from './register';
 import login from './login';
 import refresh from './refresh';
 import settings from './settings';
+import info from './info';
 
 const router = Router();
 
@@ -10,5 +11,6 @@ router.use('/register', register);
 router.use('/login', login);
 router.use('/refresh', refresh);
 router.use('/settings', settings);
+router.use('/info', info);
 
 export default router;
